--- a/roles/install_vault/templates/Dockerfile.j2
+++ b/roles/install_vault/templates/Dockerfile.j2
@@ -1,6 +1,6 @@
 FROM alpine:3.7
 
-ENV VAULT_VERSION {{ version }}
+ENV VAULT_VERSION {{ vault.version }}
 
 RUN mkdir /vault
 
@@ -18,6 +18,6 @@ ENV PATH="PATH=$PATH:$PWD/vault"
 
 COPY ./config/vault-config.json /vault/config/vault-config.json
 
-EXPOSE {{ port }}
+EXPOSE {{ vault.port }}
 
 ENTRYPOINT ["vault"]
