--- a/roles/install_vault/templates/docker-compose.yaml.j2
+++ b/roles/install_vault/templates/docker-compose.yaml.j2
@@ -6,15 +6,23 @@ services:
     build:
       context: ./vault
       dockerfile: Dockerfile
-    ports:
-      - {{ port }}:{{ port }}
+    restart: always
     volumes:
       - ./vault/config:/vault/config
       - ./vault/policies:/vault/policies
       - ./vault/data:/vault/data
       - ./vault/logs:/vault/logs
     environment:
-      - VAULT_ADDR=http://127.0.0.1:{{ port }}
+      - VAULT_ADDR=http://127.0.0.0:{{ vault.port }}
     command: server -config=/vault/config/vault-config.json
     cap_add:
       - IPC_LOCK
+    networks:
+      vault: 
+        ipv4_address: 172.29.1.10
+
+networks:
+  vault:
+    ipam:
+      config:
+      - subnet: 172.29.1.0/24
