--- a/roles/install_vpn/templates/client.conf.j2
+++ b/roles/install_vpn/templates/client.conf.j2
@@ -1,11 +1,13 @@
 client
-dev tun
+#dev tun
+dev tap
 proto udp
-remote {{ ansible_host }} {{ port }} udp
+remote {{ ansible_host }} {{ vpn.port }} udp
 resolv-retry infinite
 nobind
 persist-key
 persist-tun
+dhcp-option DNS 10.0.8.1:54
 ca ca.crt
 cert {{ client_name }}.crt
 key {{ client_name }}.key
@@ -14,4 +16,5 @@ tls-auth ta.key 1
 cipher AES-256-CBC
 data-ciphers AES-256-CBC
 data-ciphers-fallback AES-256-CBC
+comp-lzo
 verb 3
