--- a/roles/install_vpn/templates/server.conf.j2
+++ b/roles/install_vpn/templates/server.conf.j2
@@ -1,16 +1,19 @@
-port {{ port }}
+port {{ vpn.port }}
 proto udp
-dev tun
+#;dev tun
+dev tap
 ca ca.crt
 cert server.crt
 key server.key
 dh dh.pem
 server 10.8.0.0 255.255.255.0
-ifconfig-pool-persist /var/log/openvpn/ipp.txt
-push "redirect-gateway def1 bypass-dhcp"
-push "dhcp-option DNS 8.8.8.8"
-push "dhcp-option DNS 8.8.8.8"
+ifconfig-pool-persist ipp.txt
+#push "redirect-gateway def1 bypass-dhcp"
+push "dhcp-option DNS 10.8.0.1:54"
+push "route 10.8.0.0 255.255.255.0"
+;route 10.8.0.0 255.255.255.0
 keepalive 10 120
+comp-lzo
 tls-auth ta.key 0
 cipher AES-256-CBC
 persist-key
@@ -18,3 +21,4 @@ persist-tun
 status /var/log/openvpn/openvpn-status.log
 verb 3
 explicit-exit-notify 1
+client-to-client
