--- a/roles/install_defectdojo/templates/nginx.conf.j2
+++ b/roles/install_defectdojo/templates/nginx.conf.j2
@@ -1,7 +1,11 @@
 
      
      location / {
-             proxy_pass http://172.30.2.10:8080/;
+                proxy_set_header        Host $host;
+                proxy_set_header        X-Real-IP $remote_addr;
+                proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header        X-Forwarded-Proto $scheme;
+                proxy_pass http://172.30.2.10:8080/;
      }
     
 
