--- a/roles/install_onedev/templates/agent.dokcerfile.j2
+++ b/roles/install_onedev/templates/agent.dokcerfile.j2
@@ -1,10 +1,21 @@
 FROM 1dev/agent:{{ onedev.version_agent }}
 
 WORKDIR /
-
+RUN curl archive.ubuntu.com
 RUN apt update && \
-    apt install sudo && \
-    curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sh -s -- -b /usr/local/bin && \
-    curl -fsSL https://raw.githubusercontent.com/ZupIT/horusec/master/deployments/scripts/install.sh | bash -s latest
+    apt install -y sudo && \
+    apt install -y python3 && \
+    apt install -y python3-pip && \
+    python3 -m pip install semgrep && \
+    python3 -m pip install --upgrade zapcli && \
+    curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sh -s -- -b /usr/local/bin
+RUN apt install -y build-essential python3-dev automake cmake git flex bison libglib2.0-dev libpixman-1-dev python3-setuptools cargo libgtk-3-dev && \
+    apt install -y lld llvm clang && \
+    apt install -y gcc-$(gcc --version|head -n1|sed 's/\..*//'|sed 's/.* //')-plugin-dev libstdc++-$(gcc --version|head -n1|sed 's/\..*//'|sed 's/.* //')-dev && \
+    apt install -y ninja-build && \
+    git clone https://github.com/AFLplusplus/AFLplusplus && \
+    cd AFLplusplus && \
+    make distrib && \
+    make install
 
 CMD ["/agent/boot/wrapper-linux-x86-64","/agent/conf/wrapper.conf"]
